# file_monitoring

./: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  FilePathHelper.cpp  FilePathHelper.h  ILogger.h  README.md  command_input.cpp  command_input.h  directorywalker.cpp  directorywalker.h  file_monitoring.cpp  file_monitoring.pro  logger.cpp  logger.h  main.cpp  monitoring.cpp  monitoring.h  pollingtimer.cpp  pollingtimer.h  test1.txt
tests/: README.md  test_case1.txt
tests/test_case7/testdir/: nested1.txt
tests/test_case9/: file_recreate.txt
